[project]
name = "comfyui_caption_this"
description = "Describe a single image or all images in a directory using models such as Janus Pro, Florence2, or JoyCaption (testing), with a particular focus on building datasets for training LoRA."
version = "1.0.8"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/MieMieeeee/ComfyUI-CaptionThis"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mie"
DisplayName = "ComfyUI_CaptionThis"
Icon = "https://github.com/MieMieeeee/ComfyUI-MieNodes/blob/2f617ba2539e8fd13a91fe790e6b5e9ae1718a58/images/channels4_profile.jpg?raw=true"
